# PetraVM

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: audit.toml
.github/: CODEOWNERS  labeler.yml
.github/scripts/: upload_perfetto_traces.py
.github/workflows/: audit.yml  benchmark.yml  book.yml  ci.yml  lint.yml
assembly/: Cargo.toml  README.md
assembly/src/: emulator.rs  instruction_args.rs  instructions_with_labels.rs  isa.rs  lib.rs  main.rs  opcodes.rs  test_util.rs  util.rs  vrom.rs  vrom_allocator.rs
assembly/src/assembler/: mod.rs
assembly/src/event/: alloc.rs  b128.rs  b32.rs  branch.rs  call.rs  comparison.rs  context.rs  fp.rs  integer_ops.rs  jump.rs  macros.rs  mod.rs  mv.rs  ret.rs  shift.rs  sli.rs  test_utils.rs
assembly/src/event/binary_ops/: b128.rs  b32.rs  mod.rs
assembly/src/event/gadgets/: mod.rs  right_logic_shift.rs
assembly/src/execution/: channels.rs  emulator.rs  mod.rs  trace.rs
assembly/src/gadgets/: integer_ops.rs  mod.rs
assembly/src/memory/: mod.rs  ram.rs  vrom.rs  vrom_allocator.rs
assembly/src/parser/: asm.pest  instruction_args.rs  instructions_with_labels.rs  mod.rs  tests.rs
assembly/tests/: add.rs  arith_tests.rs  bezout.rs  bit_ops.rs  bit_shifts.rs  branch.rs  collatz.rs  div.rs  fibnacci.rs  fibonacci.rs  func_call.rs  linked_list.rs  mul.rs  opcodes.rs  tail_long_div.rs
assembly/tests/common/: test_utils.rs
book/: book.toml
book/src/: SUMMARY.md  bibliography.bib  specification.md
docs/: specification.md
docs/benches/: benchmarks.json  index.html
examples/: add.asm  bezout.asm  bezout_deterministic.asm  bit_ops.asm  bit_shifts.asm  branch.asm  collatz.asm  div.asm  fib.asm  func_call.asm  linked_list.asm  mul.asm  non_tail_long_div.asm  opcodes.asm  static_int_list_sum.asm  static_int_list_sum_ram.asm  tail_long_div.asm
prover/: Cargo.toml  README.md  generate_opcode_benchmarks.py
prover/benches/: opcodes.rs  shift.rs
prover/examples/: collatz.rs  fibonacci.rs
prover/src/: channels.rs  circuit.rs  lib.rs  memory.rs  model.rs  prover.rs  table.rs  tables.rs  test_utils.rs  types.rs  utils.rs
prover/src/gadgets/: b128_lookup.rs  cpu.rs  mod.rs  multiple_lookup.rs  right_shifter_table.rs  state.rs
prover/src/opcodes/: binary.rs  branch.rs  call.rs  comparison.rs  cpu.rs  fp.rs  integer_ops.rs  jump.rs  ldi.rs  mod.rs  mv.rs  ret.rs  shift.rs
prover/src/opcodes/binary/: b128.rs  b32.rs  mod.rs
prover/src/opcodes/binary_ops/: b32.rs  mod.rs
prover/tests/: fibonacci.rs  opcodes.rs  other_examples.rs  simple.rs
scripts/: run_benchmark.py
verifier/: Cargo.toml  README.md
verifier/src/: lib.rs
