[workspace]
members = ["assembly", "prover", "verifier"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["The PetraVM Developers"]
description = "PetraVM: a zkVM optimized for efficient recursive composition backed by the Binius proving system."
license = "Apache-2.0"
repository = "https://github.com/PetraProver/PetraVM"
homepage = "https://github.com/PetraProver/PetraVM"
documentation = "https://docs.rs/petravm"
readme = "README.md"
keywords = ["zkvm", "zero-knowledge", "binius", "rust", "snark"]
categories = ["cryptography", "compilers", "wasm"]

[workspace.dependencies]
anyhow = "1.0"
binius_core = { git = "https://github.com/IrreducibleOSS/binius.git" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius.git" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git" }
binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git" }

[profile.release]
lto = "fat"
