[workspace]
members = ["assembly", "prover", "verifier"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["The PetraVM Developers"]
description = "PetraVM: a zkVM optimized for efficient recursive composition backed by the Binius proving system."
license = "Apache-2.0"
repository = "https://github.com/PetraProver/PetraVM"
homepage = "https://github.com/PetraProver/PetraVM"
documentation = "https://docs.rs/petravm"
readme = "README.md"
keywords = ["zkvm", "zero-knowledge", "binius", "rust", "snark"]
categories = ["cryptography", "compilers", "wasm"]

[workspace.dependencies]
anyhow = "1.0"
tracing = "0.1.41"
tracing-forest = { version = "0.1.6", features = ["ansi"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-profile = "0.10.6"

# Binius dependencies
binius_core = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_fast_compute = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_compute = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_field = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_hal = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_hash = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_m3 = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }
binius_utils = { git = "https://github.com/IrreducibleOSS/binius.git", rev = "2fdf679579e0c48c9067091c7eeec14d759a8ccc" }

[profile.release]
lto = "fat"
