[package]
name = "petravm-assembly"
version.workspace = true
edition.workspace = true
description = "PetraVM's custom assembly language parser and interpreter."
documentation = "https://docs.rs/petravm-assembly"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
binius_field.workspace = true
binius_utils.workspace = true
env_logger = "0.11.6"
num-traits = "0.2"
num_enum = "0.7.3"
once_cell = "1.21.3"
pest = "2.7.15"
pest_derive = "2.7.15"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Binius dependencies
binius_m3.workspace = true

[dev-dependencies]
rand = "0.9.0"
