[package]
name = "petravm-asm"
version.workspace = true
edition.workspace = true
description = "PetraVM's custom assembly language parser and interpreter."
documentation = "https://docs.rs/petravm-assembly"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
binius_field.workspace = true
binius_utils.workspace = true
num-traits = "0.2"
num_enum = "0.7.3"
once_cell = "1.21.3"
pest = "2.8.0"
pest_derive = "2.8.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true

# Binius dependencies
binius_m3.workspace = true

[dev-dependencies]
rand = "0.9.1"
