[package]
name = "petravm-prover"
version.workspace = true
edition.workspace = true
description = "PetraVM's prover"
documentation = "https://docs.rs/petravm-prover"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
# Feature flags for disabling individual channels for benchmarking
disable_state_channel = []
disable_prom_channel = []
disable_vrom_channel = []
disable_vrom_addr_space_channel = []

[dependencies]
anyhow.workspace = true
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4"
paste = "1.0.15"
petravm-asm = { path = "../assembly" }
thiserror = "2.0.12"
tracing.workspace = true
tracing-forest.workspace = true
tracing-profile.workspace = true
tracing-subscriber.workspace = true

# Binius dependencies
binius_compute.workspace = true
binius_core.workspace = true
binius_fast_compute.workspace = true
binius_field.workspace = true
binius_hal.workspace = true
binius_hash.workspace = true
binius_m3.workspace = true

[dev-dependencies]
binius_m3 = { workspace = true, features = ["test_utils"] }
criterion = "0.5.1"
proptest = "1.6.0"
rand = { version = "0.9.1", features = ["std"] }

[[bench]]
name = "shift"
harness = false

[[bench]]
name = "opcodes"
harness = false
