[package]
name = "petravm-verifier"
version.workspace = true
edition.workspace = true
description = "PetraVM's verifier"
documentation = "https://docs.rs/petravm-verifier"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
petravm-asm = { path = "../assembly" }
petravm-prover = { path = "../prover" }

# Binius dependencies
binius_core.workspace = true
binius_field.workspace = true
binius_hal.workspace = true
binius_hash.workspace = true
binius_m3.workspace = true

